--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.1"
