--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
+    "homepage": "https://dkpanchal101.github.io/Admin_Dashboard",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
